--- a/app/src/main/res/layout/activity_recognition.xml
+++ b/app/src/main/res/layout/activity_recognition.xml
@@ -13,34 +13,32 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
-    <Button
-        android:id="@id/btn_emergency"
-        style="@style/Widget.AppCompat.Button.Colored"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:text="@string/emergency"/>
-
-    <ImageButton
-        android:id="@id/btn_takeoff_land"
-        style="@style/AppTheme.ControlButton"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:contentDescription="@string/take_off"
-        app:srcCompat="@drawable/takeoff_land"/>
-
-    <ToggleButton
-        android:id="@+id/btn_followme"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:textOff="@string/follow_me"
-        android:textOn="@string/unfollow"
-        tools:ignore="RelativeOverlap"/>
-
     <fr.telecomlille.mydrone.view.CVClassifierView
         android:id="@+id/cvView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+
+
+    <include layout="@layout/default_piloting_layout"/>
+    <include layout="@layout/controller_layout"/>
+
+    <TextView
+        android:id="@+id/txt_following_status"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:text="@string/follow_status_waiting"
+        android:textSize="20sp"
+        tools:ignore="RelativeOverlap" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:text="Lock" />
+
 
 </RelativeLayout>
