--- a/app/src/main/res/layout/activity_recognition.xml
+++ b/app/src/main/res/layout/activity_recognition.xml
@@ -40,5 +40,16 @@
         android:layout_centerHorizontal="true"
         android:text="Lock" />
 
+    <ImageButton
+        android:id="@+id/settings"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginEnd="63dp"
+        android:layout_marginTop="16dp"
+        android:background="@android:color/transparent"
+        app:srcCompat="@android:drawable/ic_menu_manage" />
+
 
 </RelativeLayout>
