--- a/app/src/main/res/layout/activity_recognition.xml
+++ b/app/src/main/res/layout/activity_recognition.xml
@@ -33,26 +33,28 @@
 
     <ImageButton
         android:id="@+id/faceDetection"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="70px"
+        android:layout_height="70px"
         android:layout_alignParentTop="true"
         android:layout_marginStart="55dp"
         android:layout_toEndOf="@+id/txt_following_status"
         android:background="@android:color/transparent"
         android:tint="@android:color/white"
-        android:paddingTop="20dp"
+        android:layout_marginTop="17dp"
+        android:scaleType="fitCenter"
         app:srcCompat="@drawable/ic_control_face_24dp" />
 
     <ImageButton
         android:id="@+id/bodyDetection"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="70px"
+        android:layout_height="70px"
         android:layout_alignParentTop="true"
         android:layout_toEndOf="@+id/faceDetection"
         android:background="@android:color/transparent"
         android:tint="@android:color/white"
-        android:paddingTop="20dp"
-        android:paddingLeft="5dp"
+        android:layout_marginTop="17dp"
+        android:layout_marginLeft="5dp"
+        android:scaleType="fitCenter"
         app:srcCompat="?android:attr/actionModeSelectAllDrawable" />
 
     <!--
